# system_resources_monitor

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakelists.txt  LICENSE  README.md  cmake_uninstall.cmake.in  system_resorces_monitor.code-workspace
.devcontainer/: devcontainer.json  postCreateConnamds.sh
etc/systemd/: sys_mon.service
etc/systemd/ap/: sys_mon.service
etc/systemd/generic/: sys_mon.service
etc/systemd/nad/: sys_mon.service
inc/: GetOptions.h  HwMonitor.h  HwMonitor.txt  IHwMonitor.h  IMqttClient.h  MqttClient.h  MqttMsg.h  Scheduler.h  SysMonitor.h  logger.h
scripts/: cmake_config.sh  cmake_config_tests.sh  make_all.sh  make_all_tests.sh  make_clean.sh  setup_variables.sh  update_app_on_target.sh
src/: CMakelists.txt  GetOptions.cpp  HwMonitor.cpp  MqttClient.cpp  Scheduler.cpp  SysMonitor.cpp  logger.cpp  main.cpp
test/: CMakelists.txt  GetOptions_test.cpp  HwMonitor_test.cpp  Scheduler_test.cpp  SysMonitor_test.cpp
test/nr_app/: sys_mon.json
